<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_recycle_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/ll_rice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/ll_noodle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/image_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_rice" />

        <TextView
            android:id="@+id/tv_rice"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_nasi"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_noodle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/ll_snack"
        app:layout_constraintStart_toEndOf="@id/ll_rice"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/image_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_noodle" />

        <TextView
            android:id="@+id/tv_noodle"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_noodles"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/ll_drinks"
        app:layout_constraintStart_toEndOf="@id/ll_noodle"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/image_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_snack" />

        <TextView
            android:id="@+id/tv_snack"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_snack"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_snack"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/image_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_drink" />

        <TextView
            android:id="@+id/tv_drinks"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_drinks"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
