<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/image_content_desc"
        android:src="@drawable/ic_profile1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_shopping_cart"
        android:layout_width="40dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="40dp"
        android:contentDescription="@string/image_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_shopping_cart1" />


    <LinearLayout
        android:id="@+id/ll_text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hello"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_header_name"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text__header_greatings"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>